--- a/templates/ToDoPage.html
+++ b/templates/ToDoPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Todo App</title>
-    <link rel="stylesheet" href="Assets/Todopage.css">
+    <link rel="stylesheet" href="static/Todopage.css">
 </head>
 <body>
 <div class="container">
