--- a/templates/ToDoPage.html
+++ b/templates/ToDoPage.html
@@ -26,6 +26,7 @@
                 <option value="{{ tag }}">{{ tag }}</option>
                 {% endfor %}
             </select>
+            <input type="date" name="due_date" required>
             <button type="submit">Add Task</button>
         </form>
     </div>
